tests/should_fail/deep_set.nds
-- Deeply nested chunk access in a set target.
set item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of item 1 of x to 0
